--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1466,3 +1466,93 @@ body {
 .spacer{
   height:100px;
 }
+
+
+
+
+/* trang kêt nối */
+
+.image-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.image-grid h1 {
+  text-align: center;
+  width: 100%;
+  
+  font-size:40px;
+  color:hsl(351, 83%, 61%);
+}
+.image-grid h2{
+  text-align: center;
+  width:100%;
+  margin-bottom:20px;
+  font-size:20px;
+  
+}
+
+.image-box {
+  width: 200px;
+  height: 200px;
+  margin: 10px;
+  border: 1px solid #ddd;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.image-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.image-link {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.image-link a {
+  color: #333;
+  font-size: 16px;
+}
+.button {
+  display: inline-block;
+  background-color: hsl(170, 75%, 41%);
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: linear-gradient(-90deg,hsl(151, 58%, 46%) 0%,hsl(170, 75%, 41%) 100%);
+}
+
+.image-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-row a {
+  display: block;
+  width: 40%;
+  margin: 10px;
+  text-align: center;
+  text-decoration: none;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.image-row a:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.image-row img {
+  width: 100%;
+  height: auto;
+}
