--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,7 +287,8 @@ body {
 
 .grid-list {
   display: grid;
-  gap: 30px;
+  grid-template-columns: repeat(5,1fr);
+  grid-gap: 30px;
 }
 
 .category-card,
@@ -470,6 +471,7 @@ body {
   padding: 50px 30px;
   text-align: center;
   border-radius: var(--radius-5);
+  
 }
 
 .category-card .card-icon {
@@ -1713,5 +1715,13 @@ header{
   .Hello{
     display:flex;
     flex-direction: column-reverse;
+  }
+  .image-box{
+    margin-bottom:80px;
+  }
+  .grid-list{
+    display:grid;
+    grid-template-columns: repeat(1,1fr);
+    
   }
 }
